src/app/component/eco-news/components/news-preview-page/news-preview-page.component.css
.container {
  margin: 0 auto;
}

.word-wrap {
  word-break: break-word;
}

.top-elements,
.button-content,
.news-info,
.news-links-images {
  display: flex;
  align-items: center;
}

.news-info,
.news-text,
.publish,
.back-button,
.tags-item {
  font-family: 'Open Sans';
}

.top-elements {
  margin-top: 54px;
  justify-content: space-between;
}

.back-button {
  font-size: 1rem;
  line-height: 19px;
  text-decoration-line: underline;
}

.button-link {
  color: #494A49;
}

.button-arrow {
  margin-right: 6px;
}

.primary-global-button {
  padding: 16px 40px;
  border: 1px solid #13AA57;
  border-radius: 3px;
  outline: none;
}

.create-news-text {
  font-family: 'Montserrat';
  font-weight: 500;
  font-size: 3rem;
  line-height: 48px;
  color: #313131;
}

.tags,
.news-content {
  text-align: center;
}

.tags {
  padding: 48px 0 24px 0;
  display: flex;
  justify-content: center;
}

.tags-item {
  font-size: 14px;
  line-height: 16px;
  color: #666666;
  text-transform: capitalize;
  margin: 0 8px 0;
  padding: 8px 16px;
  border: 1px solid #878787;
  border-radius: 25px;
}

.news-title-container {
  margin: 0 98px;
  display: flex;
  justify-content: center;
}

.news-title {
  margin: 0 98px 24px;
  color: #313131;
  font-weight: 500;
  font-size: 3rem;
  line-height: 60px;
  font-family: 'Montserrat';
}

.news-info {
  padding: 0 292px 48px;
  justify-content: center;
}

.news-info-date,
.news-info-author {
  color: #494A49;
}

.news-info-dot {
  padding: 0 32px 0;
}

.news-links-images {
  flex-direction: column;
  margin-top: 37px;
}

.news-links-img {
  margin: 9px 0;
}

.news-image-img {
  width: 944px;
  height: 400px;
}

.news-text-container {
  margin: 0 98px;
  display: flex;
}

.news-text {
  margin-left: 74px;
  color: #000000;
  padding: 48px 0 0;
  text-align: left;
}

.news-text-content {
  width: 750px;
}

